    {^} !batch output is less verbose by default (#217)
    {^} Reduce amount of MP3 language mismatches by case-sensitive checks (#245)
    {^} !findsection ignores permdown sites in output (#253)
    {^} language detection for releases highly improved
    {^} improved stripping of scene tags before tv lookup
    {^} Allow !check and !batch for GROUP chans
    {-} TheTVDB support as public API goes offline sooner or later (#175)
    {-} !sectionins command -> edit slftp.precatcher manually! (#157)
    {-} old language base (slftp.languages)
    {-} Support for older FPC compilers (at least version 3.2.0 needed!)
    {-} !setoffset no longer required or supported
    {-} Remove !lame and associated classes
    {-} Remove !manageuser, !users, !leechers, !traders, !userslots, !freeslots and !finduser
    {-} Remove !nologinmsg, breaks many cmds due to missing responses

--=============================( SLFTP v1.5.5 )===================================-
  ** NOTE: FROM NOW ON YOU HAVE TO USE THE MAKEFILE ON LINUX AND THE MAKE.BAT ON WINDOWS **

    {+} FastMM4 memory manager (https://github.com/pleriche/FastMM4)
    {+} Partial use of Faster Regex Engine FLRE (https://github.com/BeRo1985/flre) (much faster!!!)
    {+} New dirlist Code including:
        - Changed filesize variables to use Int64 instead of Integer
        - flag to enable/disable racing incomplete files (at least with glftpd for now) (see !skipinc) (#16)
        - Reworked the file sorting with more options
        - Reworked/optimized dirlist sorting
        - Added handling for special dirs completeness (i.e. dirfix)
    {+} !skipinc to enable/disable racing incomplete files (#16)
    {+} tvlanguage rule for TVMaze infos (#79)
    {+} !sites output is in alphabetically order (#152)
    {+} !siteuser to change a site username
    {+} !sitepass to change a site password
    {+} sites in [STATS] line are ordered by completion time (uses both, ftp and irc, if catchline added)